--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>hello</title>
-    
- 
-      
-      <h1>sub promo website 1</h1>
-<p>the next one please</p>
 
-  </body>
+<!DOCTYPE html>
+
+
+<head>
+	 <title>
+bravis new min
+  </title>
+
+<p>noble</p>
+  
 </html>
