--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
 	 <title>
 bravis new min
   </title>
-<link rel="stylesheet" href="style/main.css">
 
+	body {
+
+	background: #f5f5f5;
+	font-family:monospace;
+	font-size: 150%;
+	color: black;
+	padding: 2px;
 	
-<p>noble</p>
+
+}
+
+<h1>bravispromosite/</h1>	
+<p>/okaylistenupnewsitenewwhirl/oldmanfile/</p>
   
 </html>
