--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 bravis new min
   </title>
 
-	body {
+	<style>body {
 
 	background: #f5f5f5;
 	font-family:monospace;
@@ -16,7 +16,8 @@ bravis new min
 	padding: 2px;
 	
 
-}
+}</style>
+	
 
 <h1>bravispromosite/</h1>	
 <p>/okaylistenupnewsitenewwhirl/oldmanfile/</p>
