--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 bravis new min
   </title>
 
+	<center>
 	<style>body {
 
 	background: #f5f5f5;
@@ -18,8 +19,10 @@ bravis new min
 
 }</style>
 	
-
-<h1>bravispromosite/</h1>	
-<p>/okaylistenupnewsitenewwhirl/oldmanfile/</p>
-  
+<h1>SUBNET/brainbravis/friendmac/idleness
+<h1>bravispromosite/madeintheuniverse/mainmenubar</h1>	
+<h2>alrighty this the net step/newnews </h2>
+<h2>brainybravis/listening/newmp3</h2>
+<a href="https://hostb.org/2Z1B">brainybravis/cultymac/kid/mp3/load</h2>
+</center>  
 </html>
