--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@ bravis new min
 
 }</style>
 	
-<h1>SUBNET/brainbravis/friendmac/idleness
-<h1>bravispromosite/madeintheuniverse/mainmenubar</h1>	
-<h2>alrighty this the net step/newnews </h2>
-<h2>brainybravis/listening/newmp3</h2>
-<a href="https://hostb.org/2Z1B">brainybravis/cultymac/kid/mp3/load</h2>
+<h1>sub/netlabel for nothing but anything/friendsonly</h1>
+		<h2>helping the elderly</h2>
+<a href="https://hostb.org/2Z1B">new/brainybravis</h2>
 </center>  
 </html>
