--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ bravis new min
 	
 
 }</style>
-	
+
+<img src="holliwould.jpg">
+		
 <h1>sub/netlabel for nothing but anything/friendsonly</h1>
 		<h2>helping the elderly</h2>
 <a href="https://hostb.org/2Z1B">new/brainybravis</h2>
