new layout/ sect. and logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 bravis new min
   </title>
 
-	<center>
 	<style>body {
 
 	background: #f5f5f5;
@@ -19,10 +18,11 @@ bravis new min
 
 }</style>
 
-<img src="holliwould.jpg">
+<img src="holliwould.jpg" width="300" height="400">>
 		
-<h1>sub/netlabel for nothing but anything/friendsonly</h1>
-		<h2>helping the elderly</h2>
-<a href="https://hostb.org/2Z1B">new/brainybravis</h2>
-</center>  
+<h2>sub/netlabel for nothing but anything/friendsonly</h2>
+<h2>sub/setnet/samplebrain/field recordings/singlesonly</h2>
+<a href="https://hostb.org/2Z1B">brainy bravis/ Kiddio Ryme</p>
+<a href="#">leftyolk/ Nobody's Problem</p>
+<a href="#">pappy talks/ One Show</p>
 </html>
