--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@ bravis new min
 
 }</style>
 
-<img src="holliwould.jpg" width="300" height="400">>
+<img src="holliwould.jpg" width="300" height="200">>
 		
-<h2>sub/netlabel for nothing but anything/friendsonly</h2>
-<h2>sub/setnet/samplebrain/field recordings/singlesonly</h2>
-<a href="https://hostb.org/2Z1B">brainy bravis/ Kiddio Ryme</p>
+<p>sub/netlabel for nothing but anything/friendsonly</p>
+<p>sub/setnet/samplebrain/field recordings/singlesonly</p>
+<a href="https://hostb.org/2Z1B">SETNET1/ brainy bravis / Kiddio Ryme</p>
+<p>boc stereolab remix mashed potato for everyone</p>
 <a href="#">leftyolk/ Nobody's Problem</p>
 <a href="#">pappy talks/ One Show</p>
 </html>
