--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	 <title>
-bravis new min
+subby 's honor roll list of snares
   </title>
 
 	<style>body {
@@ -16,14 +16,13 @@ bravis new min
 	padding: 2px;
 	
 
-}</style>
+}</style
 
 <img src="holliwould.jpg" width="300" height="200">>
 		
 <p>sub/netlabel for nothing but anything/friendsonly</p>
 <p>sub/setnet/samplebrain/field recordings/singlesonly</p>
 <a href="https://hostb.org/2Z1B">SETNET1/ brainy bravis / Kiddio Ryme</p>
-<p>boc stereolab remix mashed potato for everyone</p>
-<a href="#">leftyolk/ Nobody's Problem</p>
-<a href="#">pappy talks/ One Show</p>
+<a href="#">coming\leftyolk/ Nobody's Problem</p>
+<a href="#">coming\pappy talks/ One Show</p>
 </html>
