--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@ subby 's honor roll list of snares
 
 	<style>body {
 
-	background: #f5f5f5;
+	background: #000000;
 	font-family:monospace;
-	font-size: 150%;
-	color: black;
+	font-size: 60%;
+	color: white;
 	padding: 2px;
 	
 
-}</style
+}</style>
 
-<img src="holliwould.jpg" width="300" height="200">>
+<img src="holliwould.jpg" width="300" height="200">
 		
 <p>sub/netlabel for nothing but anything/friendsonly</p>
 <p>sub/setnet/samplebrain/field recordings/singlesonly</p>
