--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ subby 's honor roll list of snares
 	
 
 }</style>
-
+<img src="snep.jpg" width="300" height="200">
 <img src="holliwould.jpg" width="300" height="200">
 		
 <p>sub/netlabel for nothing but anything/friendsonly</p>
