--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ subby 's honor roll list of snares
 
 	background: #000000;
 	font-family:monospace;
-	font-size: 75%;
+	font-size: 85%;
 	color: white;
-	padding: 2px;
+	padding: 8px;
 	
 
 }</style>
@@ -23,6 +23,6 @@ subby 's honor roll list of snares
 <p>sub/netlabel for nothing but anything/friendsonly</p>
 <p>sub/setnet/samplebrain/field recordings/singlesonly</p>
 <a href="https://hostb.org/2Z1B">SETNET1/ brainy bravis / Kiddio Ryme</p>
-<a href="#">coming\leftyolk/ Nobody's Problem</p>
-<a href="#">coming\pappy talks/ One Show</p>
+<a href="https://hostb.org/3E6G"/SETNET1R/ brainy bravis/ Kiddio Ryme (remixed by leftyolk)</p>
+<a href="#">coming\pappy talks/ One Show Per Quest</p>
 </html>
