--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@ subby 's honor roll list of snares
 }</style>
 <img src="snep.jpg" width="300" height="200">
 <img src="holliwould.jpg" width="300" height="200">
-		
-<p>sub/netlabel for nothing but anything/friendsonly</p>
-<p>sub/setnet/samplebrain/field recordings/singlesonly</p>
-<a href="https://hostb.org/2Z1B">SETNET1/ brainy bravis / Kiddio Ryme</p>
-<a href="https://hostb.org/3E6G"/SETNET1R/ brainy bravis/ Kiddio Ryme (remixed by leftyolk)</p>
-<a href="#">coming\pappy talks/ One Show Per Quest</p>
+
+
+ <p>go to setnet.html for more activity</p>
 </html>
